--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 
 # 博主
 author: true
-name: '周恒'
+name: 'TK'
 NickName: 'TKARCHER'
 webtitle: 'TKARCHER Blog'
 bio: '枯燥且无味'
 about: true
-aboutyou: '一个喜欢计算机的化学生'
+aboutyou: 'Misaka Mikoto 单推人'
 portraits: '/assets/profile.jpeg' # your portraits image file path
 
 # SNS
@@ -34,8 +34,8 @@ SNS-icon: #['Facebook', 'weibo', 'qq', 'github', 'Dribbble', 'Twitter', 'instagr
   instagram: 'TKARCHER'
   Twitter: 'zhouheng'
   Dribbble: ''
-  Facebook: '周恒'
-  Google: 'heng zhou'
+  Facebook: 'TK'
+  Google: 'TK'
   zhihu: 'TKARCHER'
   juejin: ''
   twitch: 'TKARCHER'
